@@ -1,3 +1,8 @@
+2007-10-09  Martin Lambers <marlam@marlam.de>
+
+	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
+	MH_DIRSEP. Update the users accordingly.
+
 2007-09-13  Martin Lambers <marlam@marlam.de>
 
 	* src/view_area.cpp: Skip postprocessing if it is not necessary.
